crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotated_dimension_members.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    private byte @Nullable [] buf;
    volatile @Nullable Object state;
    native int @Nullable [] consume(boolean inAttribute);
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
PRIVATE_KW "private"
WHITESPACE " "
BYTE_KW "byte"
WHITESPACE " "
AT "@"
IDENTIFIER "Nullable"
WHITESPACE " "
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "buf"
SEMICOLON ";"
WHITESPACE "\n    "
VOLATILE_KW "volatile"
WHITESPACE " "
AT "@"
IDENTIFIER "Nullable"
WHITESPACE " "
IDENTIFIER "Object"
WHITESPACE " "
IDENTIFIER "state"
SEMICOLON ";"
WHITESPACE "\n    "
NATIVE_KW "native"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
AT "@"
IDENTIFIER "Nullable"
WHITESPACE " "
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "consume"
L_PAREN "("
BOOLEAN_KW "boolean"
WHITESPACE " "
IDENTIFIER "inAttribute"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..145
  CLASS_DECL@0..144
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..144
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      FIELD_DECL@17..47
        MODIFIER_LIST@17..24
          PRIVATE_KW@17..24 "private"
        WHITESPACE@24..25 " "
        TYPE@25..42
          BYTE_KW@25..29 "byte"
          WHITESPACE@29..30 " "
          DIMENSIONS@30..42
            MODIFIER_LIST@30..39
              MARKER_ANNOTATION@30..39
                AT@30..31 "@"
                QUALIFIED_NAME@31..39
                  IDENTIFIER@31..39 "Nullable"
            WHITESPACE@39..40 " "
            DIMENSION@40..42
              L_BRACKET@40..41 "["
              R_BRACKET@41..42 "]"
        WHITESPACE@42..43 " "
        VARIABLE_DECLARATOR_LIST@43..46
          VARIABLE_DECLARATOR@43..46
            IDENTIFIER@43..46 "buf"
        SEMICOLON@46..47 ";"
      WHITESPACE@47..52 "\n    "
      FIELD_DECL@52..84
        MODIFIER_LIST@52..70
          VOLATILE_KW@52..60 "volatile"
          WHITESPACE@60..61 " "
          MARKER_ANNOTATION@61..70
            AT@61..62 "@"
            QUALIFIED_NAME@62..70
              IDENTIFIER@62..70 "Nullable"
        WHITESPACE@70..71 " "
        TYPE@71..77
          QUALIFIED_NAME@71..77
            IDENTIFIER@71..77 "Object"
        WHITESPACE@77..78 " "
        VARIABLE_DECLARATOR_LIST@78..83
          VARIABLE_DECLARATOR@78..83
            IDENTIFIER@78..83 "state"
        SEMICOLON@83..84 ";"
      WHITESPACE@84..89 "\n    "
      METHOD_DECL@89..142
        MODIFIER_LIST@89..95
          NATIVE_KW@89..95 "native"
        WHITESPACE@95..96 " "
        TYPE@96..112
          INT_KW@96..99 "int"
          WHITESPACE@99..100 " "
          DIMENSIONS@100..112
            MODIFIER_LIST@100..109
              MARKER_ANNOTATION@100..109
                AT@100..101 "@"
                QUALIFIED_NAME@101..109
                  IDENTIFIER@101..109 "Nullable"
            WHITESPACE@109..110 " "
            DIMENSION@110..112
              L_BRACKET@110..111 "["
              R_BRACKET@111..112 "]"
        WHITESPACE@112..113 " "
        IDENTIFIER@113..120 "consume"
        FORMAL_PARAMETERS@120..141
          L_PAREN@120..121 "("
          FORMAL_PARAMETER@121..140
            TYPE@121..128
              BOOLEAN_KW@121..128 "boolean"
            WHITESPACE@128..129 " "
            IDENTIFIER@129..140 "inAttribute"
          R_PAREN@140..141 ")"
        SEMICOLON@141..142 ";"
      WHITESPACE@142..143 "\n"
      R_BRACE@143..144 "}"
  WHITESPACE@144..145 "\n"
