crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_array_initializer.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@A({1, 2, 3}) class B {}
TOKENS:
AT "@"
IDENTIFIER "A"
L_PAREN "("
L_BRACE "{"
INTEGER_LITERAL "1"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "2"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "3"
R_BRACE "}"
R_PAREN ")"
WHITESPACE " "
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "B"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..24
  CLASS_DECL@0..24
    MODIFIER_LIST@0..13
      ANNOTATION@0..13
        AT@0..1 "@"
        QUALIFIED_NAME@1..2
          IDENTIFIER@1..2 "A"
        ANNOTATION_ARGUMENT_LIST@2..13
          L_PAREN@2..3 "("
          ARRAY_INITIALIZER@3..12
            L_BRACE@3..4 "{"
            LITERAL@4..5
              INTEGER_LITERAL@4..5 "1"
            COMMA@5..6 ","
            WHITESPACE@6..7 " "
            LITERAL@7..8
              INTEGER_LITERAL@7..8 "2"
            COMMA@8..9 ","
            WHITESPACE@9..10 " "
            LITERAL@10..11
              INTEGER_LITERAL@10..11 "3"
            R_BRACE@11..12 "}"
          R_PAREN@12..13 ")"
    WHITESPACE@13..14 " "
    CLASS_KW@14..19 "class"
    WHITESPACE@19..20 " "
    IDENTIFIER@20..21 "B"
    WHITESPACE@21..22 " "
    CLASS_BODY@22..24
      L_BRACE@22..23 "{"
      R_BRACE@23..24 "}"
