crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_constant.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface Limits {
    int MAX_SIZE = 100;
    String DEFAULT_TYPE = "JSON";
}

TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "Limits"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "MAX_SIZE"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "100"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "DEFAULT_TYPE"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
STRING_LITERAL "\"JSON\""
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..80
  ANNOTATION_TYPE_DECL@0..79
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..17 "Limits"
    WHITESPACE@17..18 " "
    ANNOTATION_TYPE_BODY@18..79
      L_BRACE@18..19 "{"
      WHITESPACE@19..24 "\n    "
      FIELD_DECL@24..43
        TYPE@24..27
          INT_KW@24..27 "int"
        WHITESPACE@27..28 " "
        VARIABLE_DECLARATOR_LIST@28..42
          VARIABLE_DECLARATOR@28..42
            IDENTIFIER@28..36 "MAX_SIZE"
            WHITESPACE@36..37 " "
            EQUAL@37..38 "="
            WHITESPACE@38..39 " "
            LITERAL@39..42
              INTEGER_LITERAL@39..42 "100"
        SEMICOLON@42..43 ";"
      WHITESPACE@43..48 "\n    "
      FIELD_DECL@48..77
        TYPE@48..54
          QUALIFIED_NAME@48..54
            IDENTIFIER@48..54 "String"
        WHITESPACE@54..55 " "
        VARIABLE_DECLARATOR_LIST@55..76
          VARIABLE_DECLARATOR@55..76
            IDENTIFIER@55..67 "DEFAULT_TYPE"
            WHITESPACE@67..68 " "
            EQUAL@68..69 "="
            WHITESPACE@69..70 " "
            LITERAL@70..76
              STRING_LITERAL@70..76 "\"JSON\""
        SEMICOLON@76..77 ";"
      WHITESPACE@77..78 "\n"
      R_BRACE@78..79 "}"
  WHITESPACE@79..80 "\n"
