crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_empty_argument_list.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@Ann() class A {}
TOKENS:
AT "@"
IDENTIFIER "Ann"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..17
  CLASS_DECL@0..17
    MODIFIER_LIST@0..6
      ANNOTATION@0..6
        AT@0..1 "@"
        QUALIFIED_NAME@1..4
          IDENTIFIER@1..4 "Ann"
        ANNOTATION_ARGUMENT_LIST@4..6
          L_PAREN@4..5 "("
          R_PAREN@5..6 ")"
    WHITESPACE@6..7 " "
    CLASS_KW@7..12 "class"
    WHITESPACE@12..13 " "
    IDENTIFIER@13..14 "A"
    WHITESPACE@14..15 " "
    CLASS_BODY@15..17
      L_BRACE@15..16 "{"
      R_BRACE@16..17 "}"
