crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_mixed.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface Complex {
    int count() default 0;
    String[] tags() default 1;
    double VERSION = 1.0;
}

TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "Complex"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "count"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
INTEGER_LITERAL "0"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "tags"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n    "
DOUBLE_KW "double"
WHITESPACE " "
IDENTIFIER "VERSION"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
FLOAT_LITERAL "1.0"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..107
  ANNOTATION_TYPE_DECL@0..106
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..18 "Complex"
    WHITESPACE@18..19 " "
    ANNOTATION_TYPE_BODY@19..106
      L_BRACE@19..20 "{"
      WHITESPACE@20..25 "\n    "
      ANNOTATION_TYPE_ELEMENT_DECL@25..47
        TYPE@25..28
          INT_KW@25..28 "int"
        WHITESPACE@28..29 " "
        IDENTIFIER@29..34 "count"
        L_PAREN@34..35 "("
        R_PAREN@35..36 ")"
        WHITESPACE@36..37 " "
        DEFAULT_KW@37..44 "default"
        WHITESPACE@44..45 " "
        LITERAL@45..46
          INTEGER_LITERAL@45..46 "0"
        SEMICOLON@46..47 ";"
      WHITESPACE@47..52 "\n    "
      ANNOTATION_TYPE_ELEMENT_DECL@52..78
        TYPE@52..60
          QUALIFIED_NAME@52..58
            IDENTIFIER@52..58 "String"
          DIMENSIONS@58..60
            DIMENSION@58..60
              L_BRACKET@58..59 "["
              R_BRACKET@59..60 "]"
        WHITESPACE@60..61 " "
        IDENTIFIER@61..65 "tags"
        L_PAREN@65..66 "("
        R_PAREN@66..67 ")"
        WHITESPACE@67..68 " "
        DEFAULT_KW@68..75 "default"
        WHITESPACE@75..76 " "
        LITERAL@76..77
          INTEGER_LITERAL@76..77 "1"
        SEMICOLON@77..78 ";"
      WHITESPACE@78..83 "\n    "
      FIELD_DECL@83..104
        TYPE@83..89
          DOUBLE_KW@83..89 "double"
        WHITESPACE@89..90 " "
        VARIABLE_DECLARATOR_LIST@90..103
          VARIABLE_DECLARATOR@90..103
            IDENTIFIER@90..97 "VERSION"
            WHITESPACE@97..98 " "
            EQUAL@98..99 "="
            WHITESPACE@99..100 " "
            LITERAL@100..103
              FLOAT_LITERAL@100..103 "1.0"
        SEMICOLON@103..104 ";"
      WHITESPACE@104..105 "\n"
      R_BRACE@105..106 "}"
  WHITESPACE@106..107 "\n"
