crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_type_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface A {}
TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..15
  ANNOTATION_TYPE_DECL@0..15
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..12 "A"
    WHITESPACE@12..13 " "
    ANNOTATION_TYPE_BODY@13..15
      L_BRACE@13..14 "{"
      R_BRACE@14..15 "}"
