crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_type_member_like.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface A { int value(); }
TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "value"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..29
  ANNOTATION_TYPE_DECL@0..29
    AT@0..1 "@"
    INTERFACE_KW@1..10 "interface"
    WHITESPACE@10..11 " "
    IDENTIFIER@11..12 "A"
    WHITESPACE@12..13 " "
    ANNOTATION_TYPE_BODY@13..29
      L_BRACE@13..14 "{"
      WHITESPACE@14..15 " "
      ANNOTATION_TYPE_ELEMENT_DECL@15..27
        TYPE@15..18
          INT_KW@15..18 "int"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..24 "value"
        L_PAREN@24..25 "("
        R_PAREN@25..26 ")"
        SEMICOLON@26..27 ";"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
